--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^23.6.0",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^5.3.0",
-    "eslint-plugin-prettier": "^2.6.2",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "deep-freeze": "0.0.1",
+    "eslint": "^5.3.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "jest": "^23.5.0",
     "prettier": "^1.14.2"
   },
